2000-10-16  Philip Blundell  <pb@futuretv.com>

	* configure.in: Set version number to 2.10.1.
	* configure: Regenerate.

2000-10-12  Peter Jeremy  <peter.jeremy@alcatel.com.au>

	From 2000-08-08  Peter Jeremy  <peter.jeremy@alcatel.com.au>
	* emultempl/elf32.em (_after_close): Refer to -rpath not --rpath
	in error message.
	(gld${EMULATION_NAME}_place_orphan): Quite compiler warnings.

2000-04-14  Matthew Green  <mrg@cygnus.com>
	
	* configure.tgt: Add NetBSD/sparc ELF, and NetBSD/sparc64 support.

2000-06-07  Michael Sokolov  <msokolov@ivan.Harhan.ORG>

	* emultempl/mipsecoff.em (gld{EMULATION_NAME}_after_open): Require all
	input objects to be ECOFF.
	(check_sections): einfo takes %B, not %P, to print a BFD name.

2000-07-31  Rodney Brown  <RodneyBrown@pmsc.com>

	* configure.tgt: Select targ_emul=elf_i386 for Unixware 7
	(i586-sco-sysv5uw7.1.0).

2000-06-18  Alan Modra  <alan@linuxcare.com.au>

	* NEWS: Update list of targets supporting --gc-sections.

	* scripttempl/elf.sc: KEEP .eh_frame contents.
	* scripttempl/elfd30v.sc: Same here.

2000-05-22  David O'Brien  <obrien@FreeBSD.org>

        * configure.tgt: Recognize alpha-*-freebsd*.

2000-05-26  Eli Zaretskii  <eliz@is.elta.co.il>

	* ldmain.c: Include filenames.h.
	(set_scripts_dir): Support backslashes in program name.

2000-05-23  Philip Blundell  <pb@futuretv.com>

	* configure.in: Set version to 2.10.
	* configure: Regenerate.

2000-05-15  David O'Brien  <obrien@FreeBSD.org>

	* lexsup.c (parse_args): Update the year in the copyright notice.

2000-05-13  Philip Blundell  <pb@futuretv.com>

	From Joel Sherrill <joel@OARcorp.com>:
	* configure.tgt (sparc-*-rtemsaout*, sparc-*-rtemself*): New.
	(sparc-*-rtems*): Use ELF.
	(i960-*-rtemself*, i960-*-rtemscoff*): New.
	(i[3456]86-*-rtemscoff*): New.
	(i[3456]86-*-rtems*): Use ELF.
	(sh-*-rtemscoff*): New.
	(m68*-*-rtemscoff*, m68*-*-rtemself): New.
	(m68*-*-rtems*): Use ELF.

2000-05-03  Alan Modra  <alan@linuxcare.com.au>
