@@ -1,3 +1,12 @@
+2000-11-05  Alan Modra  <alan@linuxcare.com.au>
+
+	* ldlex.l (yy_create_string_buffer): Init yy_is_our_buffer,
+	yy_is_interactive, yy_at_bol, and yy_fill_buffer.
+	* ldlex.c: Regenerate.
+
+	* Makefile.am (DISTCLEANFILES): Add stringify.sed.
+	* Makefile.in: Regenerate.
+
 2000-10-16  Philip Blundell  <pb@futuretv.com>
 
 	* configure.in: Set version number to 2.10.1.
